--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ input {
 <div class="hearts"></div>
 
 <script>
-const correctPassword = "bibhusha"; // lowercase on purpose
+const correctPassword = "babe"; // lowercase on purpose
 const music = document.getElementById("bgMusic");
 const hearts = document.querySelector(".hearts");
 
@@ -218,4 +218,5 @@ function createHearts() {
 </script>
 
 </body>
+
 </html>3:29 PM 2/6/2026
