--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ input {
 
 <!-- 🎶 Music (plays after first tap) -->
 <audio id="bgMusic" loop>
-  <source src="music.mp3" type="audio/mpeg">
+  <source src="https://github.com/sanjaybhujel/purpose/blob/main/music.mp3" type="audio/mpeg">
 </audio>
 
 <!-- 🔒 PASSWORD LOCK -->
@@ -220,3 +220,4 @@ function createHearts() {
 </body>
 
 </html>3:29 PM 2/6/2026
+
