--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ input {
 <div class="card" id="mainCard" style="display:none;">
   <div class="name">Bibhusha 💕</div>
 
-  <img src="photo.jpg" alt="Us Together">
+  <img src="https://github.com/sanjaybhujel/purpose/blob/main/photo.jpg" alt="Us Together">
 
   <p>
     Every heartbeat of mine whispers your name ✨<br>
@@ -220,4 +220,5 @@ function createHearts() {
 </body>
 
 </html>3:29 PM 2/6/2026
+
 
